# maui-vvave

./: CMakeLists.txt  README.md
po/ar/: vvave.po
po/ca/: vvave.po
po/ca@valencia/: vvave.po
po/cs/: vvave.po
po/de/: vvave.po
po/en_GB/: vvave.po
po/eo/: vvave.po
po/es/: vvave.po
po/eu/: vvave.po
po/fi/: vvave.po
po/fr/: vvave.po
po/ga/: vvave.po
po/gl/: vvave.po
po/he/: vvave.po
po/hu/: vvave.po
po/ia/: vvave.po
po/it/: vvave.po
po/ja/: vvave.po
po/ka/: vvave.po
po/ko/: vvave.po
po/lt/: vvave.po
po/lv/: vvave.po
po/nl/: vvave.po
po/pl/: vvave.po
po/pt/: vvave.po
po/pt_BR/: vvave.po
po/sa/: vvave.po
po/sk/: vvave.po
po/sl/: vvave.po
po/sv/: vvave.po
po/tr/: vvave.po
po/uk/: vvave.po
po/zh_CN/: vvave.po
po/zh_TW/: vvave.po
src/: CMakeLists.txt  assets.qrc  main.cpp  main.qml  vvave.cpp  vvave.h
src/db/: Queries.js  collectionDB.cpp
src/kde/: server.cpp  server.h
src/kde/mpris2/: mediaplayer2player.cpp  mediaplayer2player.h  mpris2.cpp  mpris2.h
src/models/albums/: albumsmodel.cpp  albumsmodel.h
src/models/playlists/: playlistsmodel.cpp  playlistsmodel.h
src/models/tracks/: tracksmodel.cpp  tracksmodel.h
src/pulpo/: pulpo.cpp  pulpo.h  service.h
src/pulpo/services/: lastfmService.cpp  lastfmService.h  spotifyService.cpp  spotifyService.h
src/services/local/: artworkprovider.cpp  artworkprovider.h  player.cpp  player.h  playlist.cpp  playlist.h  powermanagementinterface.cpp  powermanagementinterface.h  taginfo.cpp  taginfo.h  trackinfo.cpp
src/utils/: Player.js  bae.h
src/widgets/: AlbumsView.qml  FloatingDisk.qml  FocusView.qml  MiniMode.qml  SelectionBar.qml  TracksGroup.qml  TracksView.qml
src/widgets/BabeTable/: BabeTable.qml  TableMenu.qml
src/widgets/InfoView/: InfoView.qml
src/widgets/MainPlaylist/: MainPlaylist.qml
src/widgets/PlaylistsView/: PlaylistsView.qml  PlaylistsViewModel.qml
src/widgets/SettingsView/: SettingsDialog.qml  ShortcutsDialog.qml
src/widgets/TagsView/: TagsView.qml  TagsViewModel.qml
src/widgets/VVaveGrid/: VVaveGrid.qml
src/widgets/VVaveTable/: TableDelegate.qml  TableMenu.qml  VVaveTable.qml
